--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@hookform/resolvers": "^2.9.11",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^4.12.0",
+    "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -24,7 +26,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.0-rc.1",
+    "react-hook-form": "^7.0.0",
     "typescript": "4.9.5",
     "zod": "^3.21.4"
   },
